# mobile_manipulation_809e

./: README.md
logical_camera/: CMakeLists.txt  package.xml
logical_camera/include/: ROSLogicalCameraPlugin.hh
logical_camera/src/: ROSLogicalCameraPlugin.cc
manipulation_809e/: CMakeLists.txt  package.xml
manipulation_809e/nodes/: manipulator
manipulation_809e/src/manipulation_809e/: manipulation_class.py
navigation_809e/: package.xml
navigation_809e/nodes/: bot_controller  main
navigation_809e/param/: aruco_lookup.yaml
navigation_809e/src/navigation_809e/: navigation_class.py
pick_and_place_809e/: CMakeLists.txt  package.xml
pick_and_place_809e/launch/: start.launch
pick_and_place_809e/nodes/: pick_and_place
rbkairos_common/: .gitignore
rbkairos_common/moveit/rbkairos_ur5_egh_moveit_config/launch/: moveit.rviz
rbkairos_sim/doc/: todo.txt
rbkairos_sim/rbkairos_gazebo/: CMakeLists.txt  package.xml
rbkairos_sim/rbkairos_gazebo/launch/: gazebo_rviz.launch  rbkairos_gazebo.launch
rbkairos_sim/rbkairos_gazebo/models/house/: model.config  model.sdf
rbkairos_sim/rbkairos_gazebo/rviz/: rbkairos_a.rviz
rbkairos_sim/rbkairos_gazebo/worlds/: house.world
rbkairos_sim/rbkairos_sim_bringup/launch/: rbkairos_complete.launch
summit_xl_common/summit_xl_localization/: package.xml
summit_xl_common/summit_xl_localization/launch/: map_server.launch
summit_xl_common/summit_xl_navigation/config/: base_local_planner_params.yaml  eband_local_planner_omni_params.yaml  teb_local_planner_omni_params.yaml
(+4 files in other folders)
