<?xml version="1.0"?>
<package format="2">
  <name>logical_camera</name>
  <version>0.0.0</version>
  <description>
    Package for logical cameras
  </description>

  <!-- original nist_gear authors -->
  <author email="zeidk@umd.edu">Zeid Kootbally</author>
  <maintainer email="zeidk@umd.edu">Zeid Kootbally</maintainer>
  <license>Apache 2.0</license>
  

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  
  <depend>geometry_msgs</depend>
  <depend>python-rospkg</depend>
  <depend>rospack</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
